# MSFM

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  CMakeLists.txt.notused  CloudWidget.cpp  CloudWidget.cpp.bk2  CloudWidget.h  CoreInterfaceWidget.cpp  CoreInterfaceWidget.h  ImageTileWidget.cpp  ImageTileWidget.h  ImageWidget.cpp  ImageWidget.h  KeyFrameModel.cpp  KeyFrameModel.h  KeyFramePanel.cpp  KeyFramePanel.h  KeyFrameWidget.cpp  KeyFrameWidget.h  MainWindow.cpp  MainWindow.h  MatchPanel.cpp  MatchPanel.h  MatchPanelModel.cpp  MatchPanelModel.h  MatchWidget.cpp  MatchWidget.h  MyVtkWidget.cpp  MyVtkWidget.h  VisibleImagesPanel.cpp  VisibleImagesPanel.h  main.cpp
src/core/: BAHandler.cpp  BAHandler.h  Camera.cpp  Camera.h  DetectorExtractor.cpp  DetectorExtractor.h  InputFrameProcessor.cpp.notused  InputFrameProcessor.h.notused  PathReader.cpp  PathReader.h  PlyIO.cpp  PlyIO.h  PolygonModel.cpp  PolygonModel.h  ProjectIO.cpp  ProjectIO.h  PtCloud.cpp  PtCloud.h  SFMPipeline.cpp  SFMPipeline.h  SFMVideoPipeline.cpp.notused  SFMVideoPipeline.h.notused  ThreadsafeQueue.h.notused  Utils.cpp  Utils.h
src/core/ba/: v3d_cameramatrix.h  v3d_distortion.h  v3d_linear.h  v3d_linear_tnt.h  v3d_linearbase.h  v3d_mathutilities.h  v3d_metricbundle.cpp  v3d_metricbundle.h  v3d_nonlinlsq.cpp  v3d_nonlinlsq.h  v3d_optimization.cpp  v3d_optimization.h  v3d_optimization_lm.cpp  v3d_serialization.h  v3d_stereobundle.cpp  v3d_stereobundle.h  v3d_vrmlio.h
src/core/ceres/: EigenQuaternionParameterization.cpp  EigenQuaternionParameterization.h
src/core/datastructs/: Data.h  Frame.h  LandMark.h  Measurement.h
src/core/ptam/: ATANCamera.cc  ATANCamera.h  HomographyInit.cc  KeyFrame.cc  KeyFrame.h  MapMaker.cc  MapMaker.h  MapPoint.cc  MapPoint.h  Params.cpp  Params.h  PatchFinder.cc  ShiTomasi.cc  SmallBlurryImage.cc
src/ui/: CloudWidget.cpp  CloudWidget.h  CoreInterfaceWidget.cpp  CoreInterfaceWidget.h  EpipolarPanel.cpp  EpipolarPanel.h  FramePanel.cpp.notused  FramePanel.h.notused  GraphWidget.cpp.notused  GraphWidget.h.notused  ImageTileWidget.cpp  ImageTileWidget.h  ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h  MatchPanel.cpp  MatchPanel.h  MatchPanelModel.cpp  MatchPanelModel.h  MatchWidget.cpp  MatchWidget.h  VideoPanel.cpp.notused  VideoPanel.h.notused  VisibleImagesPanel.cpp  VisibleImagesPanel.h  main.cpp
tst/: CMakeLists.txt  Frame_test.cpp  SFMPipeline_test.cpp  TestGlobals.h  Utils_test.cpp  main.cpp
