set(BINARY ${CMAKE_PROJECT_NAME}_tst)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)

file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)

set(SOURCES ${TEST_SOURCES})

include_directories(
  ${EIGEN3_INCLUDE_DIRS}
)  

add_executable(${BINARY} ${TEST_SOURCES})

add_test(NAME ${BINARY} COMMAND ${BINARY})

target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest ${OpenCV_LIBS} ${CERES_LIBRARIES})

file(COPY data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})